fixing overflow

--- a/style-me/src/components/UsuarioCriado/UsuarioCriado.scss
+++ b/style-me/src/components/UsuarioCriado/UsuarioCriado.scss
@@ -29,7 +29,7 @@ $colors: #a020f0, #d90429, #ff5800, #007fff;
 }
 
 body{
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 
